Professional Portfolio Part 2

--- a/pro-aboutme.html
+++ b/pro-aboutme.html
@@ -26,6 +26,7 @@
             <h3>Contact Information</h3>
                 <p>Email: hannahlermanda@gmail.com</p>
                 <p>Phone Number: 123-456-7890</p>
+                <p>Last Update: 9/30/2022</p>
         </footer>
     </body>
 </html>
