Professional Portfolio Part 2

--- a/pro-contact.html
+++ b/pro-contact.html
@@ -14,7 +14,7 @@
             </ul>
         </nav>
     </head>
-    <body>
+    <body id="contactformandinfo">
         <h2 id="contact">Contact</h2>
             <div class="parainfo">
                 <p>Send me a message</p>
@@ -50,6 +50,7 @@
                             <h3>Contact Information</h3>
                                 <p>Email: hannahlermanda@gmail.com</p>
                                 <p>Phone Number: 123-456-7890</p>
+                                <p>Last Update: 9/30/2022</p>
                         </footer>
             </div>
     </body>
