Professional Portfolio Part 2

--- a/pro-home.html
+++ b/pro-home.html
@@ -41,6 +41,8 @@
             <h3>Contact Information</h3>
                 <p>Email: hannahlermanda@gmail.com</p>
                 <p>Phone Number: 123-456-7890</p>
+                <p>Last Update: 9/30/2022</p>
+            </div>
         </footer>
     </body>
 </html>
