test for vscode

--- a/pro-aboutme.html
+++ b/pro-aboutme.html
@@ -23,7 +23,7 @@
            I started to learn HTML and CSS with the {G}Code House in the Fall 2022 and am eager to learn more about my possible place in the tech industry.
         </p>
         <footer>
-            <h3>Contact Information</h3>
+            <h3>Contact Information.</h3>
                 <p>Email: hannahlermanda@gmail.com</p>
                 <p>Phone Number: 123-456-7890</p>
                 <p>Last Update: 9/30/2022</p>
